demo code added

--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>io.github.rkolesnev.kstream.customstores.lucene.GeoKStreamApp</mainClass>
+              <mainClass>io.github.rkolesnev.kstream.customstores.neo4j.streamsapp.KStreamApp</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
